[gd_scene load_steps=5 format=3 uid="uid://emlhy8hilx00"]

[ext_resource type="Script" uid="uid://03yckactusbs" path="res://core/ui/aquariumHUD/AquariumHUD.gd" id="1_kg4aj"]
[ext_resource type="PackedScene" uid="uid://vw28hqimg17m" path="res://core/ui/components/moneyDisplay/MoneyDisplay.tscn" id="2_8yqsc"]
[ext_resource type="PackedScene" uid="uid://c6qmtkj61lgup" path="res://core/ui/errorPopup/ErrorPopupManager.tscn" id="2_nd0lw"]
[ext_resource type="PackedScene" uid="uid://cobv8ufbqehcx" path="res://core/ui/aquariumShop/AquariumShop.tscn" id="3_bamba"]

[node name="AquariumHud" type="CanvasLayer"]
script = ExtResource("1_kg4aj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="Shop" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
text = "Shop"

[node name="Map" type="Button" parent="MarginContainer"]
custom_minimum_size = Vector2(150, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Return to Map"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="Day" type="Label" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Bla bla bla"

[node name="MoneyDisplay" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_8yqsc")]
layout_mode = 2

[node name="ErrorPopupManager" parent="." instance=ExtResource("2_nd0lw")]

[node name="AquariumShop" parent="." instance=ExtResource("3_bamba")]

[connection signal="pressed" from="MarginContainer/Shop" to="." method="_on_shop_pressed"]
[connection signal="pressed" from="MarginContainer/Map" to="." method="_on_map_pressed"]
[connection signal="create_structure_from_shop" from="AquariumShop" to="." method="_on_aquarium_shop_create_structure_from_shop"]
